@@ -5,7 +5,7 @@
 \title{Calculate windows of the index of association for genlight objects.}
 \usage{
 win.ia(x, window = 100L, min.snps = 3L, threads = 1L, quiet = FALSE,
-  chromosome_buffer = TRUE)
+  name_window = TRUE, chromosome_buffer = TRUE)
 }
 \arguments{
 \item{x}{a \link[=genlight-class]{genlight} or \link[=snpclone-class]{snpclone} object.}
@@ -23,6 +23,10 @@ cores/CPUs. In most cases this is ideal for speed. Note: this option is
 passed to \code{\link[=bitwise.ia]{bitwise.ia()}} and does not parallelize the windowization process.}
 
 \item{quiet}{if \code{FALSE} (default), a progress bar will be printed to the screen.}
+
+\item{name_window}{if \code{TRUE} (default), the result vector will be named with
+the terminal position of the window. In the case where several chromosomes
+are represented, the position will be appended using a period/full stop.}
 
 \item{chromosome_buffer}{\emph{DEPRECATED} if \code{TRUE} (default), buffers will be placed
 between adjacent chromosomal positions to prevent windows from spanning two
@@ -70,22 +74,24 @@ plot(res, type = "l")
 
 # Converting chromosomal coordinates to tidy data
 library("dplyr")
+library("tidyr")
 res_tidy <- res \%>\% 
   data_frame(rd = ., chromosome = names(.)) \%>\% # create two column data frame
-  group_by(chromosome) \%>\%                      # group data by chromosome
-  mutate(window = row_number()) \%>\%             # windows by chromosome
-  ungroup(chromosome) \%>\%                       # ungroup and reorder
-  mutate(chromosome = factor(chromosome, unique(chromosome))) 
+  separate(chromosome, into = c("chromosome", "position")) \%>\% # get the position info
+  mutate(position = as.integer(position)) \%>\% # force position as integers
+  mutate(chromosome = factor(chromosome, unique(chromosome))) # force order chromosomes
 res_tidy
 
 # Plotting with ggplot2
 library("ggplot2")
-ggplot(res_tidy, aes(x = window, y = rd, color = chromosome)) +
+ggplot(res_tidy, aes(x = position, y = rd, color = chromosome)) +
   geom_line() +
   facet_wrap(~chromosome, nrow = 1) +
   ylab(expression(bar(r)[d])) +
-  xlab("window (100bp)") +
-  theme(legend.position = "bottom")
+  xlab("terminal position of sliding window") +
+  labs(caption = "window size: 100bp") + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) +
+  theme(legend.position = "top")
 
 }
 
